--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'ru.cleverpumpkin.proguard-dictionaries-generator' version '1.0.8' apply false
+    // id 'com.android.application' version '8.12.0' apply false
+    // id 'com.android.library' version '8.12.0' apply false
     id 'com.android.application' version '8.13.0' apply false
     id 'com.android.library' version '8.13.0' apply false
 }
@@ -10,5 +12,5 @@ tasks.register('clean', Delete) {
 }
 
 project.ext {
-    okhttpVersion = '5.1.0'
+    okhttpVersion = '5.0.0-alpha.14'
 }
