--- a/json/config.json
+++ b/json/config.json
@@ -56,6 +56,47 @@
       "searchable": 0,
       "changeable": 0,
       "timeout": 60
+    },
+    {
+      "key": "PTT",
+      "name": "PTT视频┃影视",
+      "type": 3,
+      "api": "csp_PTT",
+      "searchable": 1,
+      "quickSearch": 1,
+      "ext": ""
+    },
+    {
+      "key": "Nongm",
+      "name": "旺旺影视┃影视",
+      "type": 3,
+      "api": "csp_Nongm",
+      "searchable": 1,
+      "quickSearch": 1
+    },
+    {
+      "key": "Wangfei",
+      "name": "网飞啦┃影视",
+      "type": 3,
+      "api": "csp_Wangfei",
+      "searchable": 1,
+      "quickSearch": 1
+    },
+    {
+      "key": "Ikanbot",
+      "name": "爱看机器人┃影视",
+      "type": 3,
+      "api": "csp_Ikanbot",
+      "searchable": 1,
+      "quickSearch": 1
+    },
+    {
+      "key": "NCat",
+      "name": "网飞猫┃影视",
+      "type": 3,
+      "api": "csp_NCat",
+      "searchable": 1,
+      "quickSearch": 1
     }
   ],
   "doh": [
